deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: rabenyx
  name: rabenyx
  namespace: rabenyx
  annotations:
    # The Authentication headers are humungous.
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
spec:
  rules:
  - host: rabenyx.synyx.cloud
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: rabenyx
            port:
              number: 5001
